--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -1,5 +1,6 @@
 /* CONFIGS */
 @import url('styles/reset.scss');
+@import url('styles/fonts.scss');
 @import url('styles/variables.scss');
 @import url('styles/global.scss');
 @import url('styles/typography.scss');
