--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,3 +1,37 @@
 * {
 	font-family: Inter, Arial, sans-serif;
 }
+
+.heading {
+
+	&--h1 { 
+		font-size: 80px;
+		line-height: 1.2;
+		font-weight: 600;
+	}
+
+	&--h2 { 
+		font-size: 40px;
+		line-height: 1.2;
+		font-weight: 600;
+	}
+
+	&--h3 { 
+		font-size: 22px;
+		line-height: 1.2px;
+		font-weight: 600;
+	}
+
+
+	&--h4 { 
+		font-size: 18px;
+		line-height: 1.2px;
+		font-weight: 600;
+	}
+
+}
+
+.text {
+	font-size: 18px;
+	line-height: 1.5;
+}
