--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -63,3 +63,14 @@
 	font-style: normal;
 	font-display: block;
 }
+
+@font-face {
+	font-family: 'Icon';
+	src:
+		local('fonts/icon'), url('/assets/fonts/icon/icon.ttf') format('ttf'),
+		local('fonts/icon'), url('/assets/fonts/icon/icon.woff2') format('woff2'),
+		local('fonts/icon'), url('/assets/fonts/icon/icon.woff') format('woff');
+	font-weight: 500;
+	font-style: normal;
+	font-display: block;
+}
