--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -10,3 +10,7 @@
 @import url('components/01-atoms/rainbow/rainbow.scss');
 @import url('components/01-atoms/logo/logo.scss');
 @import url('components/01-atoms/button/button.scss');
+@import url('components/01-atoms/link/link.scss');
+
+/* FORM ELEMENTS */
+@import url('components/07-form-elements/input-text/input-text.scss');
