--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,10 @@
 $black: #000000;
 $white: #FFFFFF;
 
+$grey-40: #E9E9E9;
+$grey-60: #A6A6A6;
+
+
 $rainbow-color-1: #FF4141;
 $rainbow-color-2: #FFC700;
 $rainbow-color-3: #22AFFF;
