--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -35,3 +35,17 @@
 	font-size: 18px;
 	line-height: 1.5;
 }
+
+.input__label-wrapper {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.input__label {
+	font-size: 14px;
+}
+
+.input__field {
+	font-size: 14px;
+}
