Setup: input-image component

--- a/src/components/01-atoms/button/button.scss
+++ b/src/components/01-atoms/button/button.scss
@@ -12,11 +12,15 @@
 	border-radius: 32px;
 	padding: 8px 32px;
 	background-color: transparent;
+	color: $black;
+	text-transform: uppercase;
+margin: 64px;
 
 	&__icon {
 		padding-left: 16px;
 		padding-right: 8px;
 		transition: all 0.3s ease;
+		font-size: 24px;
 	}
 
 
@@ -32,18 +36,21 @@
 		background-color: $white;
 		margin: 2px;
 		display: inline-block;
+		border: 2px solid $white
 	}
 	
 	&::after {
 		content: "";
 		position: absolute;
 		top: -5px;
-		width: 200%;
+		width: 205%;
 		bottom: -5px;
 		left: -5px;	
 		z-index: -2;
 		border-radius: 64px;
-		background: linear-gradient(45deg, $rainbow-color-1, $rainbow-color-2, $rainbow-color-3, $rainbow-color-4,  $rainbow-color-1, $rainbow-color-2, $rainbow-color-3, $rainbow-color-4);
+		// background: linear-gradient(45deg, $rainbow-color-1 12.5%, $rainbow-color-2 12.5% 25%,  $rainbow-color-3 25% 37.5%, $rainbow-color-4 37.5% 50%,  $rainbow-color-1 50% 62.5%, $rainbow-color-2 62.5% 75%, $rainbow-color-3 75% 87.5%, $rainbow-color-4 87.5% 100%);
+		background: linear-gradient(45deg, $rainbow-color-1, $rainbow-color-2,  $rainbow-color-3, $rainbow-color-4,  $rainbow-color-1, $rainbow-color-2, $rainbow-color-3, $rainbow-color-4);
+		// background: linear-gradient(45deg, $rainbow-color-1 12.5%, $rainbow-color-2 12.5% 25%,  $rainbow-color-3 25% 37.5%, $rainbow-color-4 37.5% 50%,  $rainbow-color-1 50% 62.5%, $rainbow-color-2 62.5% 75%, $rainbow-color-3 75% 87.5%, $rainbow-color-4 87.5% 100%);
 		display: inline-block;
 		transition: all 0.3s ease;
 	}
