--- a/src/components/07-form-elements/input-text/input-text.scss
+++ b/src/components/07-form-elements/input-text/input-text.scss
@@ -1,11 +1,16 @@
 @import 'styles/variables.scss';
 
-.input {
+.input-text {
 	width: 100%;
-	
+
+	&__label-wrapper {
+		display: flex;
+		flex-direction: row;
+		justify-content: space-between;
+	}
+
 	&__label {
 		display: block;
-		padding-left: 16px;
 		margin-bottom: 4px;
 
 		&--left { padding-left: 24px; }
@@ -18,6 +23,7 @@
 		padding: 12px 24px;
 		border-radius: 32px;
 		background-color: $grey-40;
+		width: 100%;
 
 		&::placeholder {
 			color: $grey-60;
