--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -14,3 +14,4 @@
 
 /* FORM ELEMENTS */
 @import url('components/07-form-elements/input-text/input-text.scss');
+@import url('components/07-form-elements/input-image/input-image.scss');
