--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -12,6 +12,9 @@
 @import url('components/01-atoms/button/button.scss');
 @import url('components/01-atoms/link/link.scss');
 
+/* MOLECULES */
+@import url('components/02-molecules/accordion/accordion.scss');
+
 /* FORM ELEMENTS */
 @import url('components/07-form-elements/input-text/input-text.scss');
 @import url('components/07-form-elements/input-image/input-image.scss');
