--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -47,9 +47,9 @@
 }
 
 .input-image__label {
+
 	font-size: 14px;
 }
-
 .input-text__field {
 	font-size: 14px;
 }
@@ -57,4 +57,9 @@
 .button {
 	font-size: 14px;
 	font-weight: 800;
+}
+
+.accordion__item .item__heading {
+	font-size: 24px;
+	font-weight: 600;
 }
