--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -14,6 +14,7 @@
 
 /* MOLECULES */
 @import url('components/02-molecules/accordion/accordion.scss');
+@import url('components/02-molecules/coin-card/coin-card.scss');
 
 /* FORM ELEMENTS */
 @import url('components/07-form-elements/input-text/input-text.scss');
