--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -63,3 +63,11 @@
 	font-size: 24px;
 	font-weight: 600;
 }
+
+.coin-card .infos__name {
+	font-size: 20px;
+}
+
+.coin-card .infos__price {
+	font-weight: 700;
+}
