--- a/src/components/01-atoms/button/button.scss
+++ b/src/components/01-atoms/button/button.scss
@@ -4,26 +4,28 @@
 .button {
 	cursor: pointer;
 	position: relative;
-	margin: 10px;
 	padding: 32px;
 	display: inline-flex;
 	flex-direction: row;
 	align-items: center;
 	overflow: hidden;
-	border-radius: 32px;
 	padding: 8px 32px;
 	background-color: transparent;
 	color: $black;
 	text-transform: uppercase;
-	margin: 64px;
-	@include rainbow-border--animated;
+	background-color: $white;
+	border-radius: 32px;
+
+	&--with-rainbow-border {
+		@include rainbow-border--animated;
+	}
 
 
 	&__icon {
 		padding-left: 16px;
 		padding-right: 8px;
 		transition: all 0.3s ease;
-		font-size: 24px;
+		font-size: 16px;
 	}
 
 	&:hover .button__icon {
