--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -68,6 +68,16 @@
 	font-size: 20px;
 }
 
+.coin-card .labels__item {
+	font-size: 12px;
+}
+
 .coin-card .infos__price {
+	font-weight: 700;
+}
+
+.promotion__label {
+	font-size: 12px;
+	text-transform: uppercase;
 	font-weight: 700;
 }
