--- a/src/components/01-atoms/link/link.scss
+++ b/src/components/01-atoms/link/link.scss
@@ -3,40 +3,66 @@
 .link {
   position: relative;
   color: $black !important;
+  padding-top: 4px;
   padding-bottom: 4px;
 	cursor: pointer;
 
-  &::before,
-  &::after {
-    position: absolute;
-    content: "";
-    left: 0;
-    bottom: -0.1rem;
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: $black;
-    transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+  &--with-underline {
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -0.1rem;
+      display: block;
+      width: 100%;
+      height: 2px;
+      background-color: $black;
+      transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+    }
+
+    &::before {
+      transform: scaleX(0);
+      transform-origin: left;
+    }
+
+    &::after {
+      transform-origin: right;
+      transition-delay: 0.25s;
+    }
+
+    &:hover::before {
+      transform: scaleX(1);
+      transition-delay: 0.25s;
+    }
+
+    &:hover::after {
+      transform: scaleX(0);
+      transition-delay: 0s;
+    }
+
   }
 
-  &::before {
-    transform: scaleX(0);
-    transform-origin: left;
-  }
+  &--with-hover-effect {
 
-  &::after {
-    transform-origin: right;
-    transition-delay: 0.25s;
-  }
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: -0.1rem;
+      display: block;
+      width: 0%;
+      height: 2px;
+      background-color: $black;
+      transition: all 0.6s cubic-bezier(0.19, 1, 0.22, 1);
+    }
 
-  &:hover::before {
-    transform: scaleX(1);
-    transition-delay: 0.25s;
-  }
+    &:hover::before {
+      transform-origin: left;
+      width: 100%;
+    }
 
-  &:hover::after {
-    transform: scaleX(0);
-    transition-delay: 0s;
   }
 
 }
