--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,9 +1,8 @@
-@mixin rainbow-border {
+@mixin rainbow-border($border-width: 2px, $background-color: $white){
 
 	position: relative;
 	border-radius: 32px;
 	overflow: hidden;
-
 
 	&::before {
 		content: "";
@@ -14,19 +13,20 @@
 		left: 0;	
 		z-index: -5;
 		border-radius: 32px;
-		background-color: $white;
-		margin: 2px;
+		background-color: $background-color;
+		margin: $border-width;
 		display: inline-block;
-		border: 2px solid $white
 	}
-
+	
     &::after {
-        content: "";
+		content: "";
         position: absolute;
+		padding: 32px;
         top: 0px;
-        width: 205%;
+        width: 200%;
         bottom: 0px;
-        left: 0px;	
+        left: -10%;	
+		border-radius: 32px;
         z-index: -10;
         background: linear-gradient(45deg, $rainbow-color-1, $rainbow-color-2,  $rainbow-color-3, $rainbow-color-4,  $rainbow-color-1, $rainbow-color-2, $rainbow-color-3, $rainbow-color-4);
         display: inline-block;
@@ -35,41 +35,21 @@
 
 }
 
-@mixin rainbow-border--animated {
-
-
-	&::before {
-		content: "";
-		position: absolute;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;	
-		z-index: -5;
-		border-radius: 32px;
-		background-color: $white;
-		margin: 2px;
-		display: inline-block;
-		border: 2px solid $white
-	}
-
-    &::after {
-        content: "";
-        position: absolute;
-        top: 0px;
-        width: 205%;
-        bottom: 0px;
-        left: 0px;	
-        z-index: -10;
-        background: linear-gradient(45deg, $rainbow-color-1, $rainbow-color-2,  $rainbow-color-3, $rainbow-color-4,  $rainbow-color-1, $rainbow-color-2, $rainbow-color-3, $rainbow-color-4);
-        display: inline-block;
-        transition: all 0.3s ease;
-    }
+@mixin rainbow-border--hover ($border-width: 2px, $background-color: $white) {
 
     &:hover::after {
-		left: -100%;
+		left: -110%;
 	}
 
+}
+
+@mixin rainbow-border--autoplay ($border-width: 2px, $background-color: $white) {
+	&::after {
+		animation-duration: 4s;
+		animation-iteration-count: infinite;
+		animation-name: wander;
+		animation-timing-function: linear;
+	}
 
 
 }
