Setup: hero component

--- a/src/components/01-atoms/button/button.scss
+++ b/src/components/01-atoms/button/button.scss
@@ -16,6 +16,7 @@
 	background-color: transparent;
 	border-radius: 32px;
 	background-color: $white;
+	text-align: center;
 
 	&__status {
 		padding-right: 16px;
