--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -21,6 +21,7 @@
 @import url('components/03-organisms/teaser-banner/teaser-banner.scss');
 @import url('components/03-organisms/desktop-navigation/desktop-navigation.scss');
 @import url('components/03-organisms/promotion/promotion.scss');
+@import url('components/03-organisms/hero/hero.scss');
 
 /* FORM ELEMENTS */
 @import url('components/07-form-elements/input-text/input-text.scss');
