--- a/src/components/03-organisms/desktop-navigation/desktop-navigation.scss
+++ b/src/components/03-organisms/desktop-navigation/desktop-navigation.scss
@@ -1,12 +1,29 @@
-.desktop-navigation {
+@import 'styles/variables.scss';
 
+.desktop-navigation {
+    z-index: 10;
+    position: relative;
+    
     &__bar, .bar {
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: center; 
-        gap: 64px;
-        padding: 24px 0;
+        position: fixed;
+        top: 80px;
+        right: 0;
+        left: 0;
+        height: 100px;
+
+
+        &__inner {
+            width: 100%;
+            height: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center; 
+            gap: 64px;
+            padding-top: 24px;
+            padding-bottom: 24px;
+            width: 100%;
+        }
 
         &__button {
             margin-left: auto;
@@ -18,6 +35,19 @@
             gap: 16px;
         }
 
+    }
+
+    &__placeholder {
+        height: 100px;
+    }
+
+    &__cover {
+        position: fixed;
+        top: 80px;
+        right: 0;
+        left: 0;
+        height:  100px;
+        background-color: $white;
     }
 
 }
