--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,3 +6,16 @@
         display: none;
     }
 }
+
+/* DEFINE SECTIONS */
+.section {
+    width: 100%;
+
+    &__inner {
+        max-width: 1440px;
+        margin: 0 auto;
+        padding: 0 32px;
+        position: relative;
+        width: 100%;
+    }
+}
