Setup: faq component

--- a/src/components/01-atoms/logo/logo.scss
+++ b/src/components/01-atoms/logo/logo.scss
@@ -1,4 +1,16 @@
+@import 'styles/variables.scss';
+
 .logo {
 	font-size: 32px;
 	font-weight: 700;
+	color: $black;
+
+	&--black {
+		color: $black;
+	}
+
+	&--white  {
+		color: $white;
+	}
+	
 }
