--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -22,6 +22,7 @@
 @import url('components/03-organisms/desktop-navigation/desktop-navigation.scss');
 @import url('components/03-organisms/promotion/promotion.scss');
 @import url('components/03-organisms/hero/hero.scss');
+@import url('components/03-organisms/faq/faq.scss');
 
 /* FORM ELEMENTS */
 @import url('components/07-form-elements/input-text/input-text.scss');
