Fix: linter errors

--- a/src/components/01-atoms/rainbow/rainbow.scss
+++ b/src/components/01-atoms/rainbow/rainbow.scss
@@ -5,6 +5,10 @@
 	color: inherit;	
 	font-weight: inherit;
 
+	&__letter { 
+		display: inline-block;
+	 }
+
 	&__letter:nth-child(4n + 1) { color: $rainbow-color-1 };
 	&__letter:nth-child(4n + 2) { color: $rainbow-color-2 };
 	&__letter:nth-child(4n + 3) { color: $rainbow-color-3 };
