Setup: coin-creation component

--- a/src/components/02-molecules/accordion/accordion.scss
+++ b/src/components/02-molecules/accordion/accordion.scss
@@ -4,6 +4,7 @@
 .accordion {
     
     &__item, .item {
+				cursor: pointer;
         display: grid;
         grid-template-rows: auto auto;
         grid-template-columns: auto 32px;
