--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -24,6 +24,7 @@
 @import url('components/03-organisms/hero/hero.scss');
 @import url('components/03-organisms/faq/faq.scss');
 @import url('components/03-organisms/newborns/newborns.scss');
+@import url('components/03-organisms/coin-creation/coin-creation.scss');
 
 /* FORM ELEMENTS */
 @import url('components/07-form-elements/input-text/input-text.scss');
