--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -20,6 +20,7 @@
 		font-size: 22px;
 		line-height: 1.2px;
 		font-weight: 600;
+		text-transform: uppercase;
 	}
 
 
@@ -56,7 +57,12 @@
 
 .button {
 	font-size: 14px;
-	font-weight: 800;
+	font-weight: 600;
+}
+
+.link {
+	font-size: 14px;
+	font-weight: 600;
 }
 
 .accordion__item .item__heading {
@@ -84,5 +90,10 @@
 
 .rainbow__letter {
 	line-height: 1.5;
-	text-transform: uppercase;
+	text-transform: inherit;
+}
+
+.coin-creation .sell-tax__label, 
+.coin-creation .buy-tax__label {
+	font-size: 14px;
 }
