Setup: navigation functionallity

--- a/src/components/01-atoms/link/link.scss
+++ b/src/components/01-atoms/link/link.scss
@@ -45,6 +45,14 @@
 
   }
 
+	&--is-active {
+
+		&::before {
+      transform-origin: left;
+      width: 100% !important;
+		}
+	}
+
   &--with-hover-effect {
 
     &::before {
