--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -26,6 +26,14 @@
 @import url('components/03-organisms/newborns/newborns.scss');
 @import url('components/03-organisms/coin-creation/coin-creation.scss');
 
+/* PAGES */
+@import url('components/05-pages/start/start.scss');
+@import url('components/05-pages/learn/learn.scss');
+@import url('components/05-pages/create/create.scss');
+@import url('components/05-pages/explore/explore.scss');
+@import url('components/05-pages/audit/audit.scss');
+
+
 /* FORM ELEMENTS */
 @import url('components/07-form-elements/input-text/input-text.scss');
 @import url('components/07-form-elements/input-image/input-image.scss');
