--- a/src/components/03-organisms/desktop-navigation/desktop-navigation.scss
+++ b/src/components/03-organisms/desktop-navigation/desktop-navigation.scss
@@ -10,7 +10,7 @@
         right: 0;
         left: 0;
         height: 100px;
-
+				margin-bottom: 0;
 
         &__inner {
             width: 100%;
