--- a/src/components/03-organisms/hero/hero.scss
+++ b/src/components/03-organisms/hero/hero.scss
@@ -5,6 +5,8 @@
         grid-template-rows: auto;
         grid-template-columns: 1fr 1fr;
         grid-gap: 32px;
+				height: 100%;
+				min-height: calc(100vh - (80px + 100px));
     }
 
     &__info, .info {
