--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -25,6 +25,8 @@
 @import url('components/03-organisms/faq/faq.scss');
 @import url('components/03-organisms/newborns/newborns.scss');
 @import url('components/03-organisms/coin-creation/coin-creation.scss');
+@import url('components/03-organisms/article/article.scss');
+@import url('components/03-organisms/audit-request/audit-request.scss');
 
 /* PAGES */
 @import url('components/05-pages/start/start.scss');
