Fix: linter errors

--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -27,6 +27,7 @@
 @import url('components/03-organisms/coin-creation/coin-creation.scss');
 @import url('components/03-organisms/article/article.scss');
 @import url('components/03-organisms/audit-request/audit-request.scss');
+@import url('components/03-organisms/notifier/notifier.scss');
 
 /* PAGES */
 @import url('components/05-pages/start/start.scss');
