--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -62,11 +62,11 @@
 
 }
 
-@mixin sunrise-background {
+@mixin sunrise-background($height) {
 	position: fixed;
 	overflow: hidden;
-	height: 80px;
 	z-index: 100;
+	height: $height;
 
 	&::after {	
 		content: "";
@@ -75,7 +75,8 @@
 		top: 0;
 		left: 0%;
 		width: 200%;
-		height: 80px;
+		height: $height;
+		bottom: 0;
 		margin-bottom: 0;
 		z-index: 5;
 	}
@@ -87,7 +88,8 @@
 		top: 0;
 		left: 0%;
 		width: 200%;
-		height: 80px;
+		bottom: 0;
+		height: $height;
 		margin-bottom: 0;
 		z-index: 5;
 	}
