--- a/src/components/03-organisms/mobile-navigation/mobile-navigation.scss
+++ b/src/components/03-organisms/mobile-navigation/mobile-navigation.scss
@@ -10,327 +10,10 @@
         right: 0;
         left: 0;
         height: 64px;
-				margin-bottom: 0;
-				z-index: 20;
-				background-color: $white;
+		margin-bottom: 0;
+		z-index: 20;
+		background-color: $white;
 				
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         &__inner {
             width: 100%;
             height: 100%;
@@ -344,10 +27,10 @@
             width: 100%;
         }
 
-				&__hamburger {
-					width: 56px;
-					height: 56px;
-				}
+		&__hamburger {
+			width: 56px;
+			height: 56px;
+		}
 
         &__button {}
 
@@ -359,34 +42,34 @@
 
     }
 
-		&__menu, .menu {
-			background-color: $black;
-			position: fixed;
-			top: calc(80px + 64px - 40px);
-			right: 0;
-			bottom: 0;
-			left: 0;
-			z-index: 15;
-			transition: all 0.3s ease;
-			height: 40px;
+	&__menu, .menu {
+		background-color: $black;
+		position: fixed;
+		top: calc(80px + 64px - 40px);
+		right: 0;
+		bottom: 0;
+		left: 0;
+		z-index: 15;
+		transition: all 0.3s ease;
+		height: 40px;
 
-			&__links, .links {
-				display: flex;
-				flex-direction: row;
-				justify-content: space-between;
-				align-items: center;
-				height: 100%;
-				padding: 0 32px;
-				border-bottom: 1px solid $white;
+		&__links, .links {
+			display: flex;
+			flex-direction: row;
+			justify-content: space-between;
+			align-items: center;
+			height: 100%;
+			padding: 0 32px;
+			border-bottom: 1px solid $white;
 
-				&__item {
-					color: $white !important;
-					opacity: 0;
-					transition: all 0.3s ease;
-				}
-
+			&__item {
+				color: $white !important;
+				opacity: 0;
+				transition: all 0.3s ease;
 			}
+
 		}
+	}
 
     &__placeholder {
         height: 64px;
@@ -423,6 +106,22 @@
 
 		@media (max-width: 950px) {
 			display: block;
+		}
+
+		@media (max-width: 500px) {
+
+			&__bar, .bar {
+				top: 120px;
+			}
+
+		}
+
+		@media (max-width: 375px) {
+
+			&__bar, .bar {
+				top: 80px;
+			}
+
 		}
 
 }
