--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -56,7 +56,7 @@
 }
 
 .button {
-	font-size: 14px;
+	font-size: 16px;
 	font-weight: 600;
 }
 
@@ -96,4 +96,20 @@
 .coin-creation .sell-tax__label, 
 .coin-creation .buy-tax__label {
 	font-size: 14px;
+}
+
+@media (max-width: 700px) {
+
+	.text {
+		font-size: 16px;
+	}
+
+	.button {
+		font-size: 12px;
+	}
+
+	.link {
+		font-size: 12px;
+	}
+	
 }
