--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -98,6 +98,10 @@
 	font-size: 14px;
 }
 
+.logo {
+	font-size: 32px;
+}
+
 @media (max-width: 700px) {
 
 	.text {
@@ -111,5 +115,13 @@
 	.link {
 		font-size: 12px;
 	}
-	
+
+}
+
+@media (max-width: 600px) {
+
+	.logo {
+		font-size: 24px;
+	}
+
 }
