Setup: responsiveness of faq component

--- a/src/components/02-molecules/coin-card/coin-card.scss
+++ b/src/components/02-molecules/coin-card/coin-card.scss
@@ -3,7 +3,7 @@
 
 .coin-card {
 
-    padding: 16px 32px 16px 16px;
+    padding: 16px;
     display: grid;
     grid-template-rows: auto;
     grid-template-columns: 64px auto;
