--- a/src/components/02-molecules/accordion/accordion.scss
+++ b/src/components/02-molecules/accordion/accordion.scss
@@ -9,7 +9,9 @@
         grid-template-rows: auto auto;
         grid-template-columns: auto 32px;
         padding: 16px 32px;
+        grid-column-gap: 16px;
         margin-bottom: 16px;
+        align-items: start;
         @include rainbow-border(2px, $white);
 
         &__heading { }
@@ -22,28 +24,13 @@
         &__text {
             grid-column: span 2;
             max-height: 0px;
+            height: 100%;
             overflow: hidden;
             opacity: 0;
             transition: max-height 0.3s ease, opacity 0.3s ease;
             padding-top: 0px;
         }
         
-        &--open {
-            
-            .item__text {
-                overflow: hidden;
-                opacity: 1;
-                max-height: 100px;
-                padding-top: 16px;
-            }
-
-            .item__icon {
-                transform: rotate(180deg);
-            }
-        }
-
-
     }
-
 
 }
