--- a/src/components/02-molecules/coin-card/coin-card.scss
+++ b/src/components/02-molecules/coin-card/coin-card.scss
@@ -14,6 +14,7 @@
         width: 64px;
         height: 64px;
         object-fit: cover; 
+        border-radius: 50%;
     }
 
     &__infos, .infos {
