Setup: responsiveness for coin-creation component

--- a/src/components/04-layouts/page/page.scss
+++ b/src/components/04-layouts/page/page.scss
@@ -32,6 +32,6 @@
 
 	.rainbow__letter::selection {
 		color: transparent !important;
-		-webkit-text-stroke: 1px white
+		-webkit-text-stroke: 1px white;
 	}
 
