--- a/src/components/03-organisms/coin-creation/coin-creation.scss
+++ b/src/components/03-organisms/coin-creation/coin-creation.scss
@@ -16,7 +16,6 @@
 	&__form, .form {
 
 		&__fieldset {
-			display: block;
 			margin-bottom: 32px;
 			display: grid;
 		}
@@ -80,6 +79,132 @@
 
 	}
 
+	@media (max-width: 800px) {
+		
+			&__form, .form {
 
+			&__fieldset {
+				display: block;
+				margin-bottom: 16px;
+				display: grid;
+			}
+
+			&__general, .general {
+				grid-template-columns: 64px 64px 1fr 1fr 1fr;
+				grid-template-rows: 64px 64px auto;
+				grid-gap: 16px;
+
+				&__input--image { grid-column: 1 / 3; grid-row: 1 / 2 }
+				&__input--name { grid-column:  3 / 6; grid-row: 1 / 2 }
+				&__input--chain { grid-column: 3 / 4; grid-row: 2 / 3 }
+				&__input--symbol { grid-column: 4 / 6; grid-row: 2 / 3 }
+
+				&__input--image { width: 128px; height: 128px; }
+
+			}
+			
+				&__supply, .supply {
+					grid-template-columns: 1fr;
+					grid-template-rows: auto;
+					grid-gap: 16px;
+				}
+			
+				&__liquidity, .liquidity {
+					grid-template-columns: 1fr;
+					grid-template-rows: auto;
+					grid-gap: 16px;
+					margin-bottom: 48px;
+				}
+			
+				&__buy-tax, .buy-tax {
+					grid-row-gap: 16px;
+					margin-bottom: 48px;
+
+					&__wrapper {
+						display: grid;
+						align-items: center;
+						grid-template-columns: 40px 1fr;
+						grid-template-rows: auto auto auto auto;
+						grid-gap: 16px;
+					}
+
+					&__label {
+						grid-row: span 4;
+						align-self: start;
+						margin-top: 8px;
+					}
+
+				}
+
+				&__sell-tax, .sell-tax {
+					grid-gap: 16px;
+					margin-bottom: 48px;
+
+					&__wrapper {
+						display: grid;
+						align-items: center;
+						grid-template-columns: 40px 1fr;
+						grid-template-rows: auto auto auto auto;
+						grid-gap: 16px;
+					}
+
+					&__label {
+						grid-row: span 4;
+						align-self: start;
+						margin-top: 8px;
+					}
+
+				}
+
+				&__limits, .limits {
+					grid-template-columns: 1fr;
+					grid-template-rows: auto auto;
+					grid-gap: 16px;
+					margin-bottom: 48px;
+				}
+
+				&__links, .links {
+					grid-template-columns: 1fr;
+					grid-template-rows: auto auto;
+					grid-gap: 16px;
+					margin-bottom: 48px;
+				}
+
+				&__actions {
+					grid-template-columns: auto auto;
+					justify-content: center;
+					align-items: center;
+					grid-gap: 32px;
+				}
+
+		}
+
+	}
+
+	@media (max-width: 600px) {
+
+		&__form, .form {
+
+			&__general, .general {
+				grid-template-columns: 1fr;
+				grid-template-rows: auto auto auto auto;
+				grid-gap: 16px;
+
+				&__input--image { grid-column: 1 / 2; grid-row: 1 / 2 }
+				&__input--name { grid-column:  1 / 2; grid-row: 2 / 3 }
+				&__input--chain { grid-column: 1 / 2; grid-row: 3 / 4 }
+				&__input--symbol { grid-column: 1 / 2; grid-row: 4 / 5 }
+
+				&__input--image { 
+					width: 120px; height: 120px;
+					align-self: center;
+					justify-self: center;
+				 }
+
+			}
+
+		}
+
+	}
 	
 }
