--- a/src/components/03-organisms/hero/hero.scss
+++ b/src/components/03-organisms/hero/hero.scss
@@ -48,7 +48,7 @@
                 grid-template-rows: auto auto;
                 grid-template-columns: 1fr;
                 grid-gap: 32px;
-                padding-right: 32px;
+                padding: 0;
                 min-height: calc(100vh - (80px + 100px));
             }
 
@@ -62,6 +62,7 @@
             &__info {
                 order: 2;
                 margin-top: 32px;
+                padding: 0 32px;
             }
 
         }
@@ -70,6 +71,10 @@
 
             &__wallpaper {
                 margin-top: 16px;
+            }
+
+            &__info {
+                padding: 0 24px;
             }
 
         }
