--- a/src/components/07-form-elements/input-image/input-image.scss
+++ b/src/components/07-form-elements/input-image/input-image.scss
@@ -18,8 +18,8 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
-		width: 80px;
-		height: 80px;
+		width: 100%;
+		height: 100%;
 		display: inline-block;
 		border-radius: 50%;
 		background-color: $grey-40;
