--- a/src/components/03-organisms/mobile-navigation/mobile-navigation.scss
+++ b/src/components/03-organisms/mobile-navigation/mobile-navigation.scss
@@ -130,6 +130,10 @@
 				top: 120px;
 			}
 
+			 &__placeholder {
+    		    height: 40px;
+  			}
+
 			& .mobile-navigation__menu, .menu {
 				top: calc(120px + 64px - 48px);
 			}
