--- a/src/components/03-organisms/audit-request/audit-request.scss
+++ b/src/components/03-organisms/audit-request/audit-request.scss
@@ -9,8 +9,17 @@
 		}
 
 		&__general, .general {
-			grid-template-columns: 160px 480px;
+			grid-template-columns: 160px 1fr;
 			grid-gap: 16px;
+
+			&__input, .input {
+
+				&--address {
+					max-width: 480px;
+				}
+
+			}
+
 		}
 
 		&__infos, .infos {
@@ -24,7 +33,47 @@
 			grid-gap: 32px;
 			justify-content: start;
 		}
+		
+	}
+	
+	@media (max-width: 800px) {
+		
+		&__form, .form {
+			
+			&__general, .general {
+				grid-template-columns: 1fr;
+				grid-template-rows: auto auto;
+		}
+
+		&__infos, .infos {
+			grid-gap: 16px;
+			
+
+		}
+
+		&__actions, .actions {
+			grid-gap: 16px;
+			grid-template-columns: auto;
+			grid-template-rows: auto auto;
+
+		}
 
 	}
 
+	}
+
+		@media (max-width: 400px) {
+		
+		&__form, .form {
+			
+		&__infos, .infos {
+			grid-template-columns: auto;
+			grid-template-rows: auto auto;
+			grid-gap: 0;
+		}
+
+
+	}
+
+	}
 }
