--- a/src/components/03-organisms/coin-creation/coin-creation.scss
+++ b/src/components/03-organisms/coin-creation/coin-creation.scss
@@ -5,6 +5,7 @@
 
 		&__title {
 			text-align: center;
+			margin-bottom: 16px;
 		}
 
 		&__text {
@@ -90,8 +91,8 @@
 			}
 
 			&__general, .general {
-				grid-template-columns: 64px 64px 1fr 1fr 1fr;
-				grid-template-rows: 64px 64px auto;
+				grid-template-columns: 72px 72px 1fr 1fr 1fr;
+				grid-template-rows: 72spx 72px auto;
 				grid-gap: 16px;
 
 				&__input--image { grid-column: 1 / 3; grid-row: 1 / 2 }
@@ -99,7 +100,7 @@
 				&__input--chain { grid-column: 3 / 4; grid-row: 2 / 3 }
 				&__input--symbol { grid-column: 4 / 6; grid-row: 2 / 3 }
 
-				&__input--image { width: 128px; height: 128px; }
+				&__input--image { width: 144px; height: 144px; }
 
 			}
 			
