--- a/src/components/03-organisms/hero/hero.scss
+++ b/src/components/03-organisms/hero/hero.scss
@@ -5,6 +5,7 @@
         grid-template-rows: auto;
         grid-template-columns: 1fr 1fr;
         grid-gap: 64px;
+        justify-content: space-between;
 		height: 100%;
 		padding-right: 0;
 		min-height: calc(100vh - (80px + 100px));
@@ -45,7 +46,7 @@
         @media (max-width: 700px) {
 
             &__inner {
-                grid-template-rows: auto auto;
+                grid-template-rows: 400px auto;
                 grid-template-columns: 1fr;
                 grid-gap: 32px;
                 padding: 0;
@@ -54,15 +55,15 @@
 
             &__wallpaper {
                 order: 1;
-                margin-top: 72px;
                 width: 100%;
                 height: 400px;
             }
 
             &__info {
                 order: 2;
-                margin-top: 32px;
+                margin: 32px 0;
                 padding: 0 32px;
+                justify-content: flex-start;
             }
 
         }
@@ -75,6 +76,7 @@
 
             &__info {
                 padding: 0 24px;
+
             }
 
         }
