Refactor: change active styles for inputs

--- a/src/components/01-atoms/rainbow/rainbow.scss
+++ b/src/components/01-atoms/rainbow/rainbow.scss
@@ -11,13 +11,15 @@
 	}
 
 
-	&__letter { 
+	&__letter, .letter { 
 		display: inline-block;
 		line-height: inherit;
-	 }
+	}
 
 	&__letter:nth-child(4n + 1) { color: $rainbow-color-1 };
 	&__letter:nth-child(4n + 2) { color: $rainbow-color-2 };
 	&__letter:nth-child(4n + 3) { color: $rainbow-color-3 };
 	&__letter:nth-child(4n + 4) { color: $rainbow-color-4 };
+
+
 };
