--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -36,3 +36,9 @@
 .disabled {
 	opacity: 0.5;
 }
+
+/* RAINBOW SELECTION */
+.rainbow .rainbow__letter::selection {
+	color: transparent !important;
+	-webkit-text-stroke: 1px white;
+}
