Setup: simple login-barrier

--- a/src/styles/central.scss
+++ b/src/styles/central.scss
@@ -29,6 +29,7 @@
 @import url('components/03-organisms/audit-request/audit-request.scss');
 @import url('components/03-organisms/notifier/notifier.scss');
 @import url('components/03-organisms/mobile-navigation/mobile-navigation.scss');
+@import url('components/03-organisms/login-form/login-form.scss');
 
 /* LAYOUTS */
 @import url('components/04-layouts/page/page.scss');
@@ -39,6 +40,7 @@
 @import url('components/05-pages/create/create.scss');
 @import url('components/05-pages/explore/explore.scss');
 @import url('components/05-pages/audit/audit.scss');
+@import url('components/05-pages/login/login.scss');
 
 /* FORM ELEMENTS */
 @import url('components/07-form-elements/input-text/input-text.scss');
